# lua-hangul

./: CMakeLists.txt  Makefile  README.md  lua-hangul-1.0-0.rockspec  lua_hangul.c  test.lua
src/: CMakeLists.txt
test/: test.lua
